unpackaged/main/default/objects/Scope_of_Work__c/fields/Training_One_On_One__c.field-meta.xml
<CustomField>
    <fullName>Training_One_On_One__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>One-On-One training can be defined in two ways. Training executive level users or general users with special requirements. Train-the-trainer applications. If selecting this option, provide a detailed narrative in comments. Attach user list.</inlineHelpText>
    <label>One-On-One</label>
    <type>Checkbox</type>
</CustomField>