unpackaged/main/default/objects/Scope_of_Work__c/fields/Training_One_On_One_Users__c.field-meta.xml
<CustomField>
    <fullName>Training_One_On_One_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the number of users requiring One-On-One training for this Client Opportunity.</inlineHelpText>
    <label>One-On-One Users</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>