unpackaged/main/default/objects/Scope_of_Work__c/fields/Unmanaged_Switching_Comments__c.field-meta.xml
<CustomField>
    <fullName>Unmanaged_Switching_Comments__c</fullName>
    <label>Unmanaged Switching Comments</label>
    <type>TextArea</type>
</CustomField>