unpackaged/main/default/objects/Scope_of_Work__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scope_of_Work</relationshipName>
    <type>Lookup</type>
</CustomField>