unpackaged/main/default/objects/Scope_of_Work__c/fields/VPN_IPSec_Comments__c.field-meta.xml
<CustomField>
    <fullName>VPN_IPSec_Comments__c</fullName>
    <inlineHelpText>If VPN IPSec is checked, describe the Client requirement. How many IPSec VPN's need to be configured and how are they used.</inlineHelpText>
    <label>VPN IPSec Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>