unpackaged/main/default/objects/Scope_of_Work__c/listViews/SOW_CPQ_Completed.listView-meta.xml
<ListView>
    <fullName>SOW_CPQ_Completed</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CPQ_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>SOW Equipment Requisition Completed</label>
    <language>en_US</language>
</ListView>